# koios

./: .gitignore  README.md  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: ci.yml
data/ontology/: phen.owl  phen.properties  sweetAll.owl  sweetAll.properties
data/processed/: dev.jsonl
experiments/: train_koios.py
experiments/outputs/: predictions.json
koios/: config.py  config.yaml  embeddings.py  model.py
koios/embeddings/: __init__.py  index.py  ontology_embedding_generator.py
koios/ontology/: generator.py  linker.py  parser.py
koios/utils/: data.py  metrics.py
tests/: test_config.py  test_data_utils.py  test_embeddings.py  test_entity_linker.py  test_metrics.py  test_model.py  test_ontology_embeddings.py  test_ontology_generator.py  test_ontology_parser.py
tests/data/ontology/: test_mini.json  test_mini.owl
