[project]
name = "koios"
version = "0.1.0"
description = "Ontology-Grounded Transformer for Interpretable NLP"
authors = [
    { name = "Your Name", email = "your@email.com" }
]
dependencies = [
    "torch",
    "transformers",
    "owlready2",
    "scikit-learn",
    "numpy",
    "pandas"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "coverage",
    "codecov",
    "pylint"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
