[project]
name = "koios"
version = "0.1.0"
description = "Ontology-Grounded Transformer for Interpretable NLP"
authors = [
    { name = "Paul Schleifer", email = "paul_schleifer@hotmail.com" }
]
dependencies = [
    "torch",
    "transformers",
    "owlready2",
    "scikit-learn",
    "numpy",
    "pandas"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "coverage",
    "codecov",
    "pylint"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["koios"]
